--- a/inst/scripts/v02/make-data_for_v02.Rmd
+++ b/inst/scripts/v02/make-data_for_v02.Rmd
@@ -86,7 +86,7 @@ BiocVersion="3.13",
 Genome="NA",
 SourceType="PNG",
 SourceUrl="https://github.com/kumeS/BioImageDbs",
-SourceVersion="",
+SourceVersion="Sep 01 2021",
 Species="Mus musculus",
 TaxonomyId="10090",
 Coordinate_1_based="NA",
@@ -104,7 +104,7 @@ Title="EM_id0005_Mouse_Kidney_2D_Mito512_4dTensor_train_dataset.gif",
   Genome="NA",
   SourceType="PNG",
   SourceUrl="https://github.com/kumeS/BioImageDbs",
-  SourceVersion="",
+  SourceVersion="Sep 01 2021",
   Species="Mus musculus",
   TaxonomyId="10090",
   Coordinate_1_based="NA",
@@ -162,7 +162,7 @@ Meta.Rds <- data.frame(
   Genome="NA",
   SourceType="PNG",
   SourceUrl="https://github.com/kumeS/BioImageDbs",
-  SourceVersion="",
+  SourceVersion="Sep 01 2021",
   Species="Mus musculus",
   TaxonomyId="10090",
   Coordinate_1_based="NA",
@@ -179,7 +179,7 @@ Meta.gif <- data.frame(
   Genome="NA",
   SourceType="PNG",
   SourceUrl="https://github.com/kumeS/BioImageDbs",
-  SourceVersion="",
+  SourceVersion="Sep 01 2021",
   Species="Mus musculus",
   TaxonomyId="10090",
   Coordinate_1_based="NA",
@@ -317,9 +317,139 @@ readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T,
 
 ### All_Mito_1024_OriginalData / All_Mito_1024_GroundTruth
 
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0005_Mouse_Kidney_2D"
+Path02 <- "01_Training"
+Original_path="All_Mito_1024_OriginalData"
+GroundTruth_path="All_Mito_1024_GroundTruth"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str(Img)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0005_Mouse_Kidney_2D_All_Mito_1024_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Mus musculus",
+  TaxonomyId="10090",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
 
 ### All_Nuc_1024_OriginalData / All_Nuc_1024_GroundTruth
 
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0005_Mouse_Kidney_2D"
+Path02 <- "01_Training"
+Original_path="All_Nuc_1024_OriginalData"
+GroundTruth_path="All_Nuc_1024_GroundTruth"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str(Img)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0005_Mouse_Kidney_2D_All_Nuc_1024_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Mus musculus",
+  TaxonomyId="10090",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### 03_Wide / WideEM_Mouse_Kidney_Fused_Img_126_190725cut / crop_x1024 / crop_x2048
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0005_Mouse_Kidney_2D"
+Path02 <- "03_Wide/WideEM_Mouse_Kidney_Fused_Img_126_190725cut"
+Original_path="crop_x1024"
+GroundTruth_path="crop_x2048"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str( Img )
+names(Img) <- c(Original_path, GroundTruth_path)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("03_Wide/", "", Path02), "_4dtensor.Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0005_Mouse_Kidney_2D_WideEM_Mouse_Kidney_Fused_Img_126_190725cut_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Mus musculus",
+  TaxonomyId="10090",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
 
 ## EM_id0006_Rat_Liver_2D
 
@@ -627,6 +757,244 @@ readr::write_csv(Meta.gif, file = paste0(DataPath, "/Metadata.csv"), append = T,
 
 ```
 
+### All_Mito_256_OriginalData / All_Mito_256_GroundTruth
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "01_Training"
+Original_path="All_Mito_256_OriginalData"
+GroundTruth_path="All_Mito_256_GroundTruth"
+WIDTH00 <- 256 ; HEIGHT00 <- 256 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str(Img)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0006_Rat_Liver_2D_All_Mito_256_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Rattus norvegicus",
+  TaxonomyId="10116",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### All_Mito_512_OriginalData / All_Mito_512_GroundTruth
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "01_Training"
+Original_path="All_Mito_512_OriginalData"
+GroundTruth_path="All_Mito_512_GroundTruth"
+WIDTH00 <- 512 ; HEIGHT00 <- 512 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str(Img)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0006_Rat_Liver_2D_All_Mito_512_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Rattus norvegicus",
+  TaxonomyId="10116",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### All_Mito_1024_OriginalData / All_Mito_1024_GroundTruth
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "01_Training"
+Original_path="All_Mito_1024_OriginalData"
+GroundTruth_path="All_Mito_1024_GroundTruth"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str(Img)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0006_Rat_Liver_2D_All_Mito_1024_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Rattus norvegicus",
+  TaxonomyId="10116",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### All_Nuc_1024_OriginalData / All_Nuc_1024_GroundTruth
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "01_Training"
+Original_path="All_Nuc_1024_OriginalData"
+GroundTruth_path="All_Nuc_1024_GroundTruth"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str( Img )
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("_OriginalData", "_4dtensor", Original_path), ".Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title="EM_id0006_Rat_Liver_2D_All_Nuc_1024_4dtensor.Rds",
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Rattus norvegicus",
+  TaxonomyId="10116",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### 03_Wide / WideEM_Rat_Liver_NCMIR_001_160408_1_1185 / crop_x1024 / crop_x2048
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "03_Wide/WideEM_Rat_Liver_NCMIR_001_160408_1_1185"
+Original_path="crop_x1024"
+GroundTruth_path="crop_x2048"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+
+#Run the conversion
+Img <- ImgDataImport_2d_seg(WIDTH = WIDTH00, HEIGHT = HEIGHT00,
+                            CHANNELS01 = CHANNELS01, CHANNELS02 = CHANNELS02,
+                            data=DataPath,
+                            path01=Path01,
+                            path02=Path02,
+                            Original_path=Original_path,
+                            GroundTruth_path=GroundTruth_path )
+str( Img )
+names(Img) <- c(Original_path, GroundTruth_path)
+saveRDS(Img, paste0(DataPath, "/", Path01, "_", sub("03_Wide/", "", Path02), "_4dtensor.Rds") )
+
+#Metadata
+Meta.Rds <- data.frame(
+  Title=paste0(Path01, "_", sub("03_Wide/", "", Path02), "_4dtensor.Rds"),
+  Description="wrote in excel",	
+  BiocVersion="3.13",
+  Genome="NA",
+  SourceType="PNG",
+  SourceUrl="https://github.com/kumeS/BioImageDbs",
+  SourceVersion="Sep 01 2021",
+  Species="Rattus norvegicus",
+  TaxonomyId="10116",
+  Coordinate_1_based="NA",
+  DataProvider="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  Maintainer="Satoshi Kume <satoshi.kume.1984@gmail.com>",
+  RDataClass="List",
+  DispatchClass="Rds",
+  RDataPath="BioImageDbs/v02/",
+  Tags="segmentation:2D images:SampleImage")
+
+readr::write_csv(Meta.Rds, file = paste0(DataPath, "/Metadata.csv"), append = T, col_names = F)
+
+```
+
+### 03_Wide / WideEM_Rat_Liver_NCMIR_001_160408_1186_2370 / crop_x1024 / crop_x2048
+
+```{r echo=TRUE, eval=FALSE}
+#Set parameters
+DataPath <- "./BioImageDbs_02_Dataset_v02"
+Path01 <- "EM_id0006_Rat_Liver_2D"
+Path02 <- "03_Wide/WideEM_Rat_Liver_NCMIR_001_160408_1186_2370"
+Original_path="crop_x1024"
+GroundTruth_path="crop_x2048"
+WIDTH00 <- 1024 ; HEIGHT00 <- 1024 ; CHANNELS01 <- 1 ; CHANNELS02 <- 1
+```
+
 ## EM_id0007_Mouse_Kidney_MultiScale
 
 ### High_Gap_OriginalData / High_Gap_GroundTruth
@@ -666,7 +1034,7 @@ filesstrings::file.move(files=paste0(DataFolder, DataFolder_Name, "_train_datase
 
 #Metadata
 Meta.Rds <- data.frame(
-  Title="EM_id0007_Mouse_Kidney_MultiScale_High_Gap_4dTensor.Rds",
+  Title=paste0(DataFolder, DataFolder_Name, ".Rds"),
   Description="wrote in excel",	
   BiocVersion="3.13",
   Genome="NA",
@@ -683,7 +1051,7 @@ Meta.Rds <- data.frame(
   RDataPath="BioImageDbs/v02/",
   Tags="segmentation:2D images:SampleImage")
 Meta.gif <- data.frame(
-  Title="EM_id0007_Mouse_Kidney_MultiScale_High_Gap_4dTensor_train_dataset.gif",
+  Title=paste0(DataFolder, DataFolder_Name, "_train_dataset.gif"),
   Description="wrote in excel",	
   BiocVersion="3.13",
   Genome="NA",
@@ -709,29 +1077,62 @@ readr::write_csv(Meta.gif, file = paste0(DataPath, "/Metadata.csv"), append = T,
 
 
 
-
-
-
-
 ### High_Nucleus_OriginalData / High_Nucleus_GroundTruth
-
 
 
 ### Middle_Fibroblast_OriginalData / Middle_Fibroblast_GroundTruth
 
 
-
 ### Middle_Podocyte_OriginalData / Middle_Podocyte_GroundTruth
-
 
 
 ### Low_Glomerulus_OriginalData / Low_Glomerulus_GroundTruth
 
 
-
 ### Low_Uriniferous_Tubule_OriginalData / Low_Uriniferous_Tubule_GroundTruth
 
 
+## EM_id0008_Human_NB4_2D
 
+### All_Cell_OriginalData / All_Cell_GroundTruth
+
+
+### All_Mito_OriginalData / All_Mito_GroundTruth
+
+
+### All_Nuc_crop512_OriginalData / All_Nuc_crop512_GroundTruth
+
+
+### All_Nuc_OriginalData / All_Nuc_GroundTruth
+
+
+### Cell_OriginalData / Cell_GroundTruth
+
+
+### Mito_OriginalData / Mito_GroundTruth
+
+
+### Nuc_crop512_OriginalData / Nuc_crop512_GroundTruth
+
+
+### Nuc_OriginalData / Nuc_GroundTruth
+
+## EM_id0009_BMMC
+
+### OriginalData / GroundTruth
+
+### All_OriginalData / All_GroundTruth
+
+## EM_id0010_HuBlast
+
+### OriginalData / GroundTruth
+
+### All_OriginalData / All_GroundTruth
+
+## EM_id0011_Jurkat
+
+### OriginalData / GroundTruth
+
+### All_OriginalData / All_GroundTruth
 
 
